--- a/13-buttons/index.html
+++ b/13-buttons/index.html
@@ -12,11 +12,11 @@
 
 <body>
 	<div class="buttons">
-		<button class="btn">Нажми меня 1</button>
-		<button class="btn">Нажми меня 2</button>
-		<button class="btn">Нажми меня 3</button>
-		<button class="btn">Нажми меня 4</button>
-		<button class="btn">Нажми меня 5</button>
+		<button class="btn">Нажми меня</button>
+		<button class="btn">Нажми меня</button>
+		<button class="btn">Нажми меня</button>
+		<button class="btn">Нажми меня</button>
+		<button class="btn">Нажми меня</button>
 	</div>
 	<div class="counter">0</div>
 </body>
