--- a/13-buttons/index.html
+++ b/13-buttons/index.html
@@ -12,11 +12,11 @@
 
 <body>
 	<div class="buttons">
-		<button class="btn">Нажми меня</button>
-		<button class="btn">Нажми меня</button>
-		<button class="btn">Нажми меня</button>
-		<button class="btn">Нажми меня</button>
-		<button class="btn">Нажми меня</button>
+		<button class="btn"><span>Нажми меня</span></button>
+		<button class="btn"><span>Нажми меня</span></button>
+		<button class="btn"><span>Нажми меня</span></button>
+		<button class="btn"><span>Нажми меня</span></button>
+		<button class="btn"><span>Нажми меня</span></button>
 	</div>
 	<div class="counter">0</div>
 </body>
