--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Book App</title>
 	<script src="./dist/app.js" type="module"></script>
+	<link rel="shortcut icon" href="./favicon.ico" type="image/x-icon">
 	<link rel="stylesheet" href="./dist/bundle.css">
 	<link rel="stylesheet" href="./static/global.css">
 	<link rel="preconnect" href="https://fonts.googleapis.com">
